src/snapshots/azure_pim_cli__roles__tests__parse_active.snap
---
source: src/roles.rs
expression: "&assignments"
---
[
  {
    "role": "Custom Role Name",
    "scope": "/subscriptions/00000000-0000-0000-0000-000000000001",
    "scope_name": "azure-sub-name"
  }
]
